# 1brc

./: .gitignore  compare_cpp_output.sh  out_cpp.txt
cpp/: .gitignore  1brc  1brc.cpp  CMakeLists.txt  conanfile.txt  perf.data  perf.data.old  profile.sh  sample.output
cpp/src/: 1brc.cpp
